--- a/src/app/logged/logged.component.html
+++ b/src/app/logged/logged.component.html
@@ -3,6 +3,9 @@
 <div>
     <ul class="nav justify-content-center">
         <li class="nav-item">
+            <a class="nav-link active" [routerLink]="['/tareas']" [routerLinkActive]="['activado']">Tasks</a>
+          </li>
+        <li class="nav-item">
           <a class="nav-link active" [routerLink]="['/proyectos']" [routerLinkActive]="['activado']">Proyects</a>
         </li>
         <li class="nav-item">
@@ -17,7 +20,7 @@
       </ul>
 </div>
 
-<div class="form-group">
+<div class="form-group" class="container p-4">
     <form #formLogged="ngForm" (ngSubmit)="onSubmit() ; formLogged.reset()">
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">Nueva Tarea</label>
@@ -50,39 +53,5 @@
     <input type="submit" value="Agregar Tarea" [disabled]="!formLogged.form.valid">      
              
     </form>
-</div>
-
-<div>
-  <h3>LISTADO DE TAREAS</h3>
-
-  <table class="table">
-      <thead class="thead-dark">
-          <tr>
-              <th scope="col">#</th>
-              <th scope="col">NOMBRE TAREA</th>
-              <th scope="col">PROYECTO</th>
-              <th scope="col">FECHA</th>
-              <th scope="col">COMENTARIOS</th>
-              <th scope="col">ELIMINAR</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr *ngFor = "let logged of loggeds; let i = index">
-              <td scope="row">{{i+1}}</td>
-              <td scope="row">{{logged.nombreTarea}}</td>
-              <td scope="row">{{logged.proyecto}}</td>
-              <td scope="row">{{logged.fechaLimite}}</td>
-              <td scope="row">{{logged.comentarios}}</td>
-              <td scope="row">
-                <button (click)="eliminarTarea(i)">Delete</button>
-              </td>
-          </tr>
-      </tbody>
-  </table>
-</div>
-
-<div id="div1" class="rounded">
-  <img src="/assets/images/hacer.jpg">
-</div>
-
+  </div>
 
